Admin Template Configure Compelete

--- a/public/index.html
+++ b/public/index.html
@@ -22,52 +22,35 @@
     <link rel="stylesheet" href="http://localhost:3000/assets/plugins/fontawesome-free/css/all.min.css"/>
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"/>
-    <!-- iCheck -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css"/>
-    <!-- JQVMap -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/jqvmap/jqvmap.min.css"/>
     <!-- Theme style -->
     <link rel="stylesheet" href="http://localhost:3000/assets/dist/css/adminlte.min.css"/>
-    <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"/>
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/daterangepicker/daterangepicker.css"/>
-    <!-- summernote -->
-    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/summernote/summernote-bs4.min.css"/>
+    <!-- DataTables -->
+    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="http://localhost:3000/assets/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+
+
+    <!-- jQuery -->
     <script src="http://localhost:3000/assets/plugins/jquery/jquery.min.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-
-
-
-<script src="http://localhost:3000/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- <script src="assets/plugins/chart.js/Chart.min.js"></script> -->
-
-<script src="http://localhost:3000/assets/plugins/sparklines/sparkline.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/jqvmap/jquery.vmap.min.js"></script>
-<script src="http://localhost:3000/assets/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/jquery-knob/jquery.knob.min.js"></script>
-
-
-<script src="http://localhost:3000/assets/plugins/moment/moment.min.js"></script>
-<script src="http://localhost:3000/assets/plugins/daterangepicker/daterangepicker.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/summernote/summernote-bs4.min.js"></script>
-
-<script src="http://localhost:3000/assets/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-
-<script src="http://localhost:3000/assets/dist/js/adminlte.js"></script>
-
-<script src="http://localhost:3000/assets/dist/js/demo.js"></script>
-
-<script src="http://localhost:3000/assets/dist/js/pages/dashboard.js"></script>
+    <!-- Bootstrap 4 -->
+    <script src="http://localhost:3000/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- DataTables  & Plugins -->
+    <script src="http://localhost:3000/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/jszip/jszip.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/pdfmake/pdfmake.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/pdfmake/vfs_fonts.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+    <script src="http://localhost:3000/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+    <!-- AdminLTE App -->
+    <script src="http://localhost:3000/assets/dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="http://localhost:3000/assets/dist/js/demo.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -94,4 +77,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
+  <script>
+      $(function () {
+          $("#example1").DataTable({
+          "responsive": true, "lengthChange": false, "autoWidth": false,
+          "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+          }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+      });
+      $("#Adminlogout").click(function(){
+        localStorage.clear();
+        window.location.href='/admin';
+      });
+  </script>
 </html>
