--- a/public/index.html
+++ b/public/index.html
@@ -79,12 +79,12 @@
   </body>
   
   <script>
-      $(function () {
-          $("#example1").DataTable({
-          "responsive": true, "lengthChange": false, "autoWidth": false,
-          "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-          }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-      });
+      // $(function () {
+      //     $("#example1").DataTable({
+      //     "responsive": true, "lengthChange": false, "autoWidth": false,
+      //     "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+      //     }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+      // });
       $("#Adminlogout").click(function(){
         localStorage.clear();
         window.location.href='/admin';
